# rs-grid-example-yew

./: AGENTS.md  Cargo.toml  README.md  Trunk.toml  index.html
.claude/: settings.json
.claude/hooks/: rustfmt-file.py
.github/workflows/: ci.yml
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: grid.spec.ts
src/: lib.rs
